html/assets/css/main.css
/* ... */
.testi-author {
    display: flex;
    align-items: center;
    gap: 20px;
    margin-top: 20px;
}

.testi-author .author-thumb img {
    border-radius: 50%;
}

.testi-author .author-info h3 {
    font-size: 22px;
    margin: 0;
    display: block;
    line-height: 1;
}

.testi-author .author-info h3 span {
    display: block;
    font-size: 16px;
    line-height: 1;
    margin-top: 10px;
}

.testimonial-carousel .swiper-pagination {
    text-align: left;
}

/* Feature List */
.feature-wrap {
    background-color: #ff9900;
    padding: 110px 40px;
    background-image: repeating-linear-gradient(45deg, #f7a20f 0, #f7a20f 2px, transparent 0, transparent 50%);
    background-size: 10px 10px;
    margin-left: 40px;
}

.buf-can-features li {
    display: flex;
    align-items: center;
    gap: 20px;
}

.buf-can-features li:not(:last-of-type) {
    margin-bottom: 30px;
}

.feature-icon {
    font-size: 60px;
    color: #fff;
}

.feature-content h3 {
    color: #fff;
    font-size: 22px;
    margin: 0;
}

.feature-content p {
    margin: 0;
    color: #fafafa;
}

/*=== 8.0 CTA Section ===*/
.cta-section {
    background-image: url(../img/texture.png);
    clip-path: polygon(0 0, 100% 0, 100% 50%, 80% 100%, 0 100%);
    background-repeat: repeat;
    background-size: cover;
    background-color: #222;
    position: relative;
    z-index: 1;
}

.cta-men {
    background-image: url(../img/cta-man.png);
    background-repeat: no-repeat;
    background-position: bottom right;
    background-size: contain;
    width: 100%;
    height: 100%;
    position: absolute;
    right: 130px;
    bottom: -30px;
    z-index: -1;
}

.cta-content .cta-call {
    display: flex;
    align-items: center;
    gap: 15px;
    margin-top: 25px;
}

.cta-content .cta-call p span {
    display: block;
}

.cta-content .cta-call p a {
    color: #ff9900;
    font-size: 32px;
    font-weight: 700;
    line-height: 1;
}

.cta-content .cta-call i {
    background-color: rgba(255, 153, 0, 0.1);
    width: 60px;
    height: 60px;
    line-height: 60px;
    text-align: center;
    font-size: 40px;
    color: #ff9900;
    border-radius: 2px;
}

.cta-content h2 {
    font-size: 46px;
    line-height: 52px;
    color: #fff;
    margin-bottom: 20px;
}

.cta-content h2 span {
    color: #ff9900;
}

.cta-content P {
    font-size: 18px;
    font-weight: 500;
    color: #ccc;
    margin: 0;
}

/*=== 8.1 CTA Section 2 ===*/
.cta-section-2{position:relative;z-index:1;overflow:hidden;padding:100px 0;}
.cta-section-2:before{background-color:rgba(0,0,0,0.3);width:100%;height:100%;content:"";position:absolute;left:0;top:0;z-index:-1;}
.cta-video-bg{position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;z-index:-2;pointer-events:none;}
.cta-section-2 .cta-men{background-size:400px auto;background-repeat:no-repeat;background-position:bottom right;width:100%;height:100%;position:absolute;right:20px;bottom:0px;z-index:1;pointer-events:none;}
@keyframes ctaFloating {0%{transform:translateY(0px) rotate(0deg);}50%{transform:translateY(-15px) rotate(1deg);}100%{transform:translateY(0px) rotate(0deg);}}
@media (max-width:1200px){.cta-section-2 .cta-men{background-size:350px auto;right:0px;}}
@media (max-width:992px){.cta-section-2 .cta-men{display:block;position:relative;background-position:center;background-size:contain;height:350px;right:0;bottom:0;margin-top:40px;}.cta-section-2{padding:80px 0 40px;}.running-taxi{display:none!important;}.dl-cursor{display:none!important;}}

@media (min-width: 993px) and (max-width: 1200px) {
    .cta-men {
        width: 450px;
        right: 70px;
        bottom: -5px;
    }
}

/*=== 9.0 Team Section ===*/
.team-thumb {
    clip-path: polygon(0 0, 90% 0%, 100% 10%, 100% 100%, 0 100%);
}

.team-thumb img{
    width: 100%;
}

.team-content {
    position: relative;
}

.team-content:before {
    background-repeat: no-repeat;
    background-position: top center;
    background-size: 50%;
    width: 100%;
    height: 100%;
    content: "";
    position: absolute;
    left: 50%;
    top: -65px;
    transform: translateX(-50%);
}

.team-content.car-1:before {
    background-image: url(../img/waterfall-icons.png);
}

.team-content.car-2:before {
    background-image: url(../img/clifton-icons.png);
}

.team-content.car-3:before {
    background-image: url(../img/toronto-icons.png);
}

.team-content.car-4:before {
    background-image: url(../img/buffalo-icons.png);
}


.team-content h3 a {
    background-color: #ff9900;
    clip-path: polygon(0 0, 100% 0, 100% 70%, 90% 100%, 0 100%);
    background-image: repeating-linear-gradient(45deg, #f7a20f 0, #f7a20f 2px, transparent 0, transparent 50%);
    background-size: 8px 8px;
    width: 90%;
    height: 70px;
    border-radius: 2px;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 22px;
    font-weight: 700;
    line-height: 1;
    margin: 0 auto;
    margin-top: -30px;
    padding-bottom: 10px;
}

.team-content h3 a:hover {
    color: #222;
}

.team-content h4 {
    background-color: #222;
    background-image: url(../img/texture.png);
    background-repeat: repeat;
    background-size: cover;
    clip-path: polygon(100% 0, 100% 100%, 10% 100%, 0% 70%, 0 0);
    color: #fff;
    width: 60%;
    height: 40px;
    border-radius: 2px;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 14px;
    font-weight: 600;
    line-height: 1;
    letter-spacing: 0;
    margin-left: auto;
    position: absolute;
    right: 59px;
    top: 50px;
    box-shadow: 0 1px 5px rgb(0 0 0 / 20%);
}

/* Driver Details */
.driver-details {
    position: relative;
}

.driver-details img {
    width: 100%;
    border-radius: 5px;
}
/* ... */

